# LinkingNumber

./: .gitignore  CMakeLists.txt  Linking Number.prj  Makefile  README-saved.rst  README.html  README.md  README.rst
cmake/: CMakeLists-linkingnumber.txt
lk_src/: linking_number.cc  linking_number.hh
matlab/: CompileLib.m  test0.m  test1.m  test2.m  test3.m  test4.m  test_paper3.m  test_paper4.m
src/: linking_number.cc  linking_number.hh
src_mex/: mex_Writhe.cc  mex_lk.cc  mex_utils.hh
tests/: test1.cc  test2.cc
tests-cpp/: test1.cc  test2.cc
toolbox/: CMakeLists.txt  CompileLK.m  CompileLK_cmake.m  demos.xml  populate_toolbox.rb  setup.m
toolbox/doc/: GettingStarted.mlx
toolbox/lib/: CompileLK.m
toolbox/src/: linking_number.cc
toolbox/src_mex/: mex_Writhe.cc  mex_lk.cc
toolbox/tests/: test4.m  test_paper1.m  test_paper2.m  test_paper3.m  test_paper4.m
toolbox/tests/html/: test0.html  test1.html  test2.html  test3.html  test4.html  test_paper1.html  test_paper2.html  test_paper3.html  test_paper4.html
